Resolves STANBOL-115: This provides the default configuration for the Stanbol Enhancer full launcher as well as the needed automatic initialization functionality to the SolrYard implementation.
Details:

Stanbol Enhancer:

Added "UTF-8" as explicit encoding after experiencing some char encoding problems.

Added default configuration to the FULL launcher including
 - Stanbol Entityhub configuration
 - DBPedia referenced site (including local caching of used Entities)
 - ReferencedSite EntityTaggingEngine for DBpedia.org

Now the Stanbol Entityhub and the DBpedia.org based Entitiy Enhancement Engine can be used WITHOUT any required configuration steps! However it still requires the remote DBpedia.org service (because no prepared dbPedia index is provided)


Stanbol Entityhub Core:

 - Referenced Site now provides result score information for entity searches answered based on external services. The ordering returned by the external service (EntitySearcher.findEntities(..)) is used.
 - Corrected a Bug in the clone() implementation of FieldQueryImplementation that caused the limit and offset not to be copied to the clone.

Stanbol Entityhub SolrYard:

The SolrYard (when running within an OSGI Environment) now manages an own EmbeddedSolrServer instance. This allows to dynamically add new solar indexes for SolrYard instances created via the ConfigAdminService (e.g. by using the Apache Felix Web Console). This feature is also key to enable the use of the SolrYard in combination with the sling launcher launchpad.
For implementation details see see the java doc of org.apache.stanbol.entityhub.yard.solr.embedded.EmbeddedSolrPorovider.

other changes
 - adapted metatype.properties to reflect the new features
 - corrected/improved error handling for IndexValueFactory
 - adapted the default solr configuration now used to initialize the internally managed EmbeddedSolrServer
 - added a default configuration for initialization of new cores


git-svn-id: https://svn.apache.org/repos/